handle Skia not drawing GPU-backend shader to a bitmap (tdf#145797)

https: //bugs.chromium.org/p/skia/issues/detail?id=12685
Change-Id: I4de51b154e270df470102c357c25bdfa430a4488
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126118
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit afdfc9bb5d56fde866882e7d87869ecafed1e3d0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126128